--- a/src/jri/page/FirstPage.form
+++ b/src/jri/page/FirstPage.form
@@ -16,17 +16,20 @@
           <text value="First Page"/>
         </properties>
       </component>
-      <vspacer id="75de3">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <component id="4a7d2" class="javax.swing.JButton" binding="moveToSecondPageButton">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Move to Second Page"/>
+        </properties>
+      </component>
+      <component id="d005c" class="javax.swing.JButton" binding="moveToBookSearchPageButton">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Move To Book Search Page"/>
         </properties>
       </component>
     </children>
