--- a/src/jri/page/SecondPage.form
+++ b/src/jri/page/SecondPage.form
@@ -1,27 +1,210 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="jri.page.SecondPage">
-  <grid id="27dc6" binding="secondPageGUI" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="secondPageGUI" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="644" height="492"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-131086"/>
+      <foreground color="-131086"/>
+      <inheritsPopupMenu value="false"/>
+      <preferredSize width="800" height="700"/>
+      <verifyInputWhenFocusTarget value="false"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="e5834" class="javax.swing.JButton" binding="returnButton">
+      <tabbedpane id="4a0f4" binding="noteListPannel" custom-create="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="2" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="200"/>
+          </grid>
+          <gridbag top="0" left="20" bottom="20" right="20" weightx="0.0" weighty="1.0"/>
         </constraints>
         <properties>
-          <text value="Return"/>
+          <background color="-20"/>
+          <font name="Fira Code" size="14" style="0"/>
+          <foreground color="-14737633"/>
+          <inheritsPopupMenu value="true"/>
+          <preferredSize width="-1" height="-1"/>
         </properties>
-      </component>
-      <component id="c57e3" class="javax.swing.JLabel" binding="label">
+        <border type="none"/>
+        <children>
+          <grid id="cabb4" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="During Read"/>
+            </constraints>
+            <properties>
+              <background color="-19"/>
+            </properties>
+            <border type="none"/>
+            <children/>
+          </grid>
+          <grid id="f381d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="After Read"/>
+            </constraints>
+            <properties>
+              <background color="-20"/>
+            </properties>
+            <border type="none"/>
+            <children/>
+          </grid>
+        </children>
+      </tabbedpane>
+      <grid id="ab1f9" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="Second Page"/>
+          <background color="-20"/>
+          <font name="BIZ UDGothic" size="12" style="0"/>
+          <foreground color="-14737633"/>
+          <preferredSize width="200" height="123"/>
+        </properties>
+        <border type="empty" title="Book Information"/>
+        <children>
+          <component id="6cea0" class="javax.swing.JLabel" binding="bookName">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="BIZ UDGothic" size="12" style="0"/>
+              <foreground color="-14737633"/>
+              <text value="Book name"/>
+            </properties>
+          </component>
+          <component id="cb759" class="javax.swing.JLabel" binding="bookAuthor">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="BIZ UDGothic" size="12" style="0"/>
+              <foreground color="-14737633"/>
+              <text value="Book author"/>
+            </properties>
+          </component>
+          <component id="77586" class="javax.swing.JLabel" binding="bookPublisher">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="BIZ UDGothic" size="12" style="0"/>
+              <foreground color="-14737633"/>
+              <text value="Book publisher"/>
+            </properties>
+          </component>
+          <component id="79724" class="javax.swing.JLabel" binding="bookPublicationYear">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="BIZ UDGothic" size="12" style="0"/>
+              <foreground color="-14737633"/>
+              <text value="Book publication year "/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <vspacer id="fe4f8">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+      </vspacer>
+      <grid id="df118" layout-manager="GridBagLayout">
+        <constraints>
+          <grid row="0" column="0" row-span="5" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <background color="-3218563"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="28524" class="javax.swing.JList" binding="menuList">
+            <constraints>
+              <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="1" use-parent-layout="false">
+                <preferred-size width="150" height="200"/>
+                <maximum-size width="150" height="-1"/>
+              </grid>
+              <gridbag top="10" left="20" bottom="0" right="20" weightx="2.0" weighty="1.0"/>
+            </constraints>
+            <properties>
+              <alignmentX value="1.0"/>
+              <alignmentY value="1.0"/>
+              <autoscrolls value="true"/>
+              <background color="-3218563"/>
+              <dropMode value="USE_SELECTION"/>
+              <fixedCellHeight value="40"/>
+              <fixedCellWidth value="30"/>
+              <focusCycleRoot value="false"/>
+              <font name="BIZ UDGothic" size="18" style="0"/>
+              <foreground color="-14737633"/>
+              <maximumSize width="-1" height="-1"/>
+              <model>
+                <item value="Bookshelf"/>
+                <item value="Book Search"/>
+                <item value="Setting"/>
+              </model>
+              <preferredSize width="150" height="-1"/>
+              <requestFocusEnabled value="false"/>
+              <selectedIndex value="-1"/>
+              <selectionBackground color="-19"/>
+              <selectionForeground color="-14737633"/>
+              <selectionMode value="0"/>
+            </properties>
+          </component>
+          <component id="692c8" class="javax.swing.JLabel" binding="menu">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false">
+                <preferred-size width="150" height="40"/>
+                <maximum-size width="100" height="-1"/>
+              </grid>
+              <gridbag top="20" left="20" bottom="10" right="0" weightx="1.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <background color="-3218563"/>
+              <doubleBuffered value="true"/>
+              <font name="BIZ UDGothic" size="14" style="1"/>
+              <foreground color="-14737633"/>
+              <opaque value="true"/>
+              <text value="Menu"/>
+            </properties>
+          </component>
+          <component id="e5834" class="javax.swing.JButton" binding="goToHomeButton">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="20"/>
+                <maximum-size width="100" height="-1"/>
+              </grid>
+              <gridbag top="0" left="0" bottom="20" right="0" weightx="1.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <background color="-3218563"/>
+              <borderPainted value="true"/>
+              <doubleBuffered value="true"/>
+              <font name="Andale Mono" size="12" style="0"/>
+              <foreground color="-14737633"/>
+              <horizontalTextPosition value="0"/>
+              <text value="Go to Home"/>
+              <verticalAlignment value="0"/>
+              <verticalTextPosition value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <component id="46a68" class="javax.swing.JLabel" binding="bookImage">
+        <constraints>
+          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="20" bottom="0" right="20" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <preferredSize width="200" height="200"/>
+          <text value="book image"/>
         </properties>
       </component>
     </children>
